# Email-Spam-Detection-

./: CMakeLists.txt  Main.cpp  Main.qml  README.md
